# magicNetXX

./: .gitignore  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/cppformat-master/: .gitignore  .travis.yml  Android.mk  CMakeLists.txt  ChangeLog.rst  README.rst  appveyor.yml  format.cc  format.h  posix.cc  posix.h
3rd/cppformat-master/doc/: CMakeLists.txt  api.rst  build.py  conf.py  cppformat.less  index.rst  syntax.rst  usage.rst
3rd/cppformat-master/doc/_templates/: layout.html
3rd/cppformat-master/doc/basic-bootstrap/: layout.html
3rd/cppformat-master/support/: appveyor-build.py  biicode-build.py  download.py  timer.py  travis-build.py
3rd/cppformat-master/support/biicode/: biicode.conf  ignore.bii  sample.cc
3rd/cppformat-master/support/cmake/: biicode.cmake  run-cmake.bat
3rd/cppformat-master/support/rtd/: index.rst
3rd/cppformat-master/support/rtd/theme/: layout.html
3rd/cppformat-master/test/: CMakeLists.txt  assert-test.cc  format-impl-test.cc  format-test.cc  gtest-extra-test.cc  gtest-extra.cc  gtest-extra.h  header-only-test.cc  header-only-test2.cc  macro-test.cc  mock-allocator.h  posix-mock-test.cc  posix-mock.h  posix-test.cc  printf-test.cc  test-assert.h  test-main.cc  util-test.cc  util.cc  util.h
3rd/cppformat-master/test/compile-test/: CMakeLists.txt
3rd/lua/src/: Makefile  lua  luac
3rd/python/: Makefile  Makefile.pre  config.status  pyconfig.h  setup.py
3rd/spdlog/: spdlog.pc  spdlogTargets.cmake
3rd/spdlog-master/: .gitignore  .travis.yml  LICENSE  README.md  astyle.sh
3rd/spdlog-master/bench/: Makefile  boost-bench-mt.cpp  boost-bench.cpp  easylogging-bench-mt.cpp  easylogging-bench.cpp  g2log-async.cpp  glog-bench-mt.cpp  glog-bench.cpp  run_all.sh  spdlog-async.cpp  spdlog-bench-mt.cpp  spdlog-bench.cpp
3rd/spdlog-master/example/: example.cpp  utils.h
3rd/spdlog-master/include/spdlog/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h  tweakme.h
3rd/spdlog-master/include/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  format.cc  format.h  line_logger.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  null_mutex.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
3rd/spdlog-master/include/spdlog/sinks/: base_sink.h  file_sinks.h  null_sink.h  sink.h  (+3 more)
3rd/spdlog-master/tests/: Makefile  file_log.cpp  format.cpp  includes.h  registry.cpp  tests.vcxproj  tests.vcxproj.filters
3rd/tolua/src/: CMakeLists.txt
3rd/tolua/src/lib/: CMakeLists.txt  tolua_map.c
base/: CMakeLists.txt
base/src/: actor.cc  actor.h  api.h  atomic.h  base.h  channel.cc  channel.h  clock.cc  clock.h  commandLineOption.cc  commandLineOption.h  config.cc  config.h  context.h  coreDump.cc  coreDump.h  counter.h  deque.h  deque2.h  fcontext.cc  fcontext.h  framework.cc  framework.h  icommandLine.h  icomponent.h  ilog.h  iq.h  list.h  lock_free_ring_queue.h  macro.h  memory_hook.cc  memory_hook.h  mstring.h  noncopyable.h  platform.h  processer.h  scheduler.cc  scheduler.h  shared_ptr.h  singleton.h  (+44 more)
base/src/api/: socket.cc  socket.h
base/src/log/: ilog.h  logConsole.cc  logConsole.h  logFile.cc  logFile.h  logSystem.cc  logSystem.h
base/src/module/: actor.cc  actor.h  actorComponent.cc  actorComponent.h  actorGcc.cc  actorGcc.h  actorSystem.cc  actorSystem.h  actorWorker.cc  actorWorker.h  componentGroup.cc  componentGroup.h  message.h
base/src/network/: errorWrap.cc  errorWrap.h  iocpEpoll.cc  iocpEpoll.h  iocpKqueue.cc  iocpKqueue.h  iocpWrap.h  socketChannel.cc  socketChannel.h  socketHandle.cc  socketHandle.h  socketSystem.cc  socketSystem.h  socketWrap.cc  socketWrap.h
base/src/operation/: clock.cc  clock.h  context.h  fcontext.cc  fcontext.h  scheduler.cc  scheduler.h  task.cc  task.h  worker.cc  worker.h
base/src/script/: installPyDlls.cc  installPyDlls.h
base/src/test/: test_actor.cc  test_actor.h
base/src/util/: counter.h  deque.h  list.h  memory.cc  memory.h  mobject.h  mutex.h  noncopyable.h  ofile.cc  ofile.h  post.cc  post.h  queue.h  shared_ptr.h  singleton.h  spinlock.h  stringUtil.cc  stringUtil.h  timestamp.h
component/SocketTest/: CMakeLists.txt
component/SocketTest/src/: SocketTest.cc
component/lnlua/: CMakeLists.txt
component/lnlua/src/: lnlua.cc
engine/: CMakeLists.txt
engine/src/: api.h  base.h  commandLineOption.cc  config.cc  coreDump.cc  coreDump.h  framework.cc  platform.h
engine/src/api/: socket.cc  socket.h
engine/src/log/: logConsole.h  logFile.cc  logFile.h  logSystem.cc  logSystem.h
engine/src/lualib/auto/: luaCoreAuto.cc  luaCoreAuto.h  luaNetworkAuto.cc  luaNetworkAuto.h
engine/src/lualib/manual/: luaExternApi.h  luaFix.h  luaLoader.cc  luaLoader.h  luaStack.cc  luaStack.h
engine/src/module/: actor.cc  actorComponent.cc  actorComponent.h  actorGcc.h  actorSystem.cc  actorSystem.h  actorWorker.h  componentGroup.cc  componentGroup.h
engine/src/network/: errorWrap.cc  iocpEpoll.cc  iocpEpoll.h  iocpKqueue.cc  iocpKqueue.h  iocpWrap.h  socketChannel.h  socketHandle.h  socketSystem.cc  socketSystem.h  socketWrap.cc
engine/src/operation/: clock.cc  fcontext.cc  fcontext.h  scheduler.h  task.h
engine/src/util/: counter.h  deque.h  list.h  mobject.h  mutex.h  noncopyable.h  ofile.cc  ofile.h  post.cc  post.h  spinlock.h  stringUtil.cc  stringUtil.h
example/example1_logger/: CMakeLists.txt
example/example1_logger/src/: main.cc
example/test_task/: CMakeLists.txt
example/test_task/src/: main.cc
launcher/: CMakeLists.txt
launcher/src/: commandLineOption.cc  commandLineOption.h  daemonOption.cc  daemonOption.h  main.cc  ucommand_optline.cc
lualib/: CMakeLists.txt
lualib/manual/: luaFile.cc  luaFile.h  luaFix.h  luaStack.cc  luaStack.h
lualib/src/auto/: luaCoreAuto.cc  luaCoreAuto.h  luaNetworkAuto.cc  luaNetworkAuto.h
lualib/src/manual/: luaLoader.cc  luaLoader.h
module/module-logger/: CMakeLists.txt
module/module-logger/src/: logger.cc
module/module-network/: CMakeLists.txt
module/module-network/src/: uchannel.h  uerror.cc  uerror.h  unetaddr.cc  unetservice.h  usocket.cc  usocket.h
python/: CMakeLists.txt
(+47 files in other folders)
